--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="#page-4">Certificates</a>
               </li>
               <li>
-                <a href="./assets/new_resume.pdf" download>Download Resume</a>
+                <a href="./assets/anubhav ramawat_GTBIT.pdf" download>Download Resume</a>
               </li>
             </ul>
           </div>
@@ -383,6 +383,23 @@
                             </div>
                         </div>
                     </div> -->
+             
+                    <div class="portfolio_item filter-app">
+                      <div class="portfolio_wrap">
+                        <img src="./assets/Screenshot (217).png" alt="" class="img-fluid" />
+                        <div class="portfolio_info">
+                          <h4>Contact-App</h4>
+        
+                          <div class="portfolio_links">
+                            <a
+                              href="https://github.com/anubhavramawat/Contact-App"
+                              target="_blank"
+                              ><i class="fa-solid fa-link"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>        
 
             <div class="portfolio_item filter-app">
               <div class="portfolio_wrap">
