--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <div class="portfolio_wrap-container">
               <div class="portfolio_item filter-web">
                         <div class="portfolio_wrap">
-                            <img src="" alt="country" class="img-fluid">
+                            <img src="./assets/Screenshot (458).png" alt="country" class="img-fluid">
                             <div class="portfolio_info">
                                 <h4>About Countries</h4>
                                 
