--- a/index.html
+++ b/index.html
@@ -378,9 +378,10 @@
                                 
                                 <div class="portfolio_links">
                                     <a 
-                                      href="https://whereinthe-world.netlify.app/">
+                                      href="https://whereinthe-world.netlify.app/"
                                       target="_blank"
-                                      <i class="fa-solid fa-link"></i></a>
+                                      ><i class="fa-solid fa-link"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
