--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                 
                                 <div class="portfolio_links">
                                     <a 
-                                      href="https://whereinthe-world.netlify.app/"
+                                      href="https://aboutworld.netlify.app/"
                                       target="_blank"
                                       ><i class="fa-solid fa-link"></i>
                                     </a>
