--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="#page-4">Certificates</a>
               </li>
               <li>
-                <a href="./assets/anubhav ramawat_GTBIT.pdf" download>Download Resume</a>
+                <a href="./assets/new-resume.pdf" download>Download Resume</a>
               </li>
             </ul>
           </div>
